# rscm

./: .envrc  .gitignore  .gtrconfig  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  stubtest-allowlist.txt
.claude/: settings.json
.claude/commands/: parity.md
.claude/commands/openspec/: archive.md  proposal.md
.claude/hooks/: markdownlint.sh
.github/ISSUE_TEMPLATE/: bug.md
.github/actions/setup/: action.yml
.github/workflows/: bump.yaml  ci.yml  release.yaml
changelog/: 111.feature.md  113.breaking.md  120.feature.md  121.feature.md  122.trivial.md  123.improvement.md  124.improvement.md  125.fix.md  126.feature.md  128.feature.md  129.improvement.md  130.improvement.md  131.breaking.md  131.feature.md  17.breaking.md  18.docs.md  39.fix.md  39.trivial.md  46.docs.md  47.feature.md  48.feature.md  53.breaking.md  53.feature.md  53.improvement.md  55.breaking.md  56.feature.md  58.improvement.md  58.trivial.md  59.feature.md  61.breaking.md  61.docs.md  61.improvement.md  62.improvement.md  63.improvement.md  64.trivial.md  66.docs.md  66.feature.md  66.fix.md  67.breaking.md  68.feature.md  (+11 more)
configs/two-layer/: defaults.toml
configs/two-layer/tuning/: high-ecs.toml
crates/rscm/: Cargo.toml
crates/rscm-calibrate/: Cargo.toml
crates/rscm-calibrate/src/: sampler.rs
crates/rscm-components/: Cargo.toml
crates/rscm-components/tests/: coupled_models.rs
crates/rscm-core/: Cargo.toml
crates/rscm-core/src/: component.rs  errors.rs  example_components.rs  grid_transform.rs  lib.rs  model.rs  schema.rs  state.rs  timeseries.rs  timeseries_collection.rs
crates/rscm-doc-gen/: Cargo.toml
crates/rscm-doc-gen/src/: extractor.rs  main.rs  parser.rs  schema.rs  stub_generator.rs
crates/rscm-macros/: Cargo.toml
crates/rscm-macros/src/: lib.rs
crates/rscm-magicc/: Cargo.toml
crates/rscm-magicc/src/: lib.rs
crates/rscm-magicc/tests/: carbon_cycle_physics.rs  conservation.rs  ecs_diagnostics.rs  lamcalc_integration.rs  lamcalc_reference_values.rs
crates/rscm-two-layer/: Cargo.toml
crates/rscm-two-layer/src/: component.rs  lib.rs
docs/: NAVIGATION.md  changelog.md  gen_doc_stubs.py  getting_started.md  grids.md  index.md  key_concepts.md  model_configuration.md  tutorials.md
docs/component_metadata/: .gitkeep  carboncycle.json  carboncyclecomponent.json  co2erf.json  fourboxoceanheatuptake.json  fourboxoceanheatuptakecomponent.json  oceansurfacepartialpressure.json  twolayer.json  twolayercomponent.json
docs/developers/: development.md  documenting_components.md  index.md  troubleshooting.md
docs/howto/: variable_registry.md
docs/javascripts/: mermaid.js
docs/modules/: README.md  module_03_halocarbon_chemistry.md  module_05_aerosol_direct.md  module_06_aerosol_indirect.md  module_07a_ghg_forcing.md  module_07b_rf_aggregation.md  module_08_climate.md  module_10_ocean_carbon.md  module_12_permafrost.md  module_13_nitrogen_limitation.md  module_14_sea_level_rise.md  module_15_main_timestep.md  time_conventions.md
docs/notebooks/: calibration_tutorial.py  component_python.py  component_rust.md  coupled_model.py  debugging_inspection.py  grid_variables.py  magicc_configuration.py  scenario_pipeline.py  state_serialisation.py  units_tutorial.ipynb  units_tutorial.py  variable_schema.py
openspec/: AGENTS.md  project.md
openspec/changes/add-four-box-timeseries/: design.md  proposal.md  tasks.md
openspec/changes/add-python-grid-output-support/: design.md  proposal.md  tasks.md
openspec/changes/add-variable-registration/: design.md  proposal.md  tasks.md
openspec/changes/aggregate-ts/: design.md  proposal.md  tasks.md
openspec/changes/auto-grid-translation/: design.md  investigation.md  tasks.md
openspec/changes/improve-component-dx/: design.md  proposal.md  tasks.md
openspec/changes/refactor-workspace-layout/: design.md  proposal.md  tasks.md
openspec/changes/support-grid-outputs/: design.md  proposal.md  tasks.md
openspec/changes/timestep-semantics/: proposal.md  tasks.md
openspec/specs/calibration/: spec.md
openspec/specs/component/: spec.md
openspec/specs/component-dx/: spec.md
openspec/specs/component-python/: spec.md
openspec/specs/component-state/: spec.md
openspec/specs/grid-timeseries/: spec.md
openspec/specs/state/: spec.md
python/rscm/: component.py  core.py
rscm-components/: Cargo.toml
rscm-components/src/components/: carbon_cycle.rs  co2_erf.rs  four_box_ocean_heat_uptake.rs  mod.rs
rscm-components/tests/: coupled_models.rs
rscm-core/: Cargo.toml
rscm-core/src/: component.rs  errors.rs  example_components.rs  grid_transform.rs  lib.rs  model.rs  spatial.rs  standard_variables.rs  state.rs  timeseries.rs  timeseries_collection.rs  variable.rs
rscm-macros/: Cargo.toml
rscm-macros/src/: lib.rs
scripts/: .env.example  generate_magicc_regression_data.py  generate_ocean_regression_data.py  magicc_regression_utils.py
scripts/regression/: generate_ghg_forcing.py  generate_ocean_udeb.py  generate_terrestrial_carbon.py  utils.py
tests/: test_calibration_integration.py  test_calibration_python_api.py  test_calibration_simple.py  test_calibration_stress.py  test_config_base.py  test_config_docs.py  test_config_loader.py  test_config_magicc_legacy.py  test_config_magicc_regression.py  test_config_parameters.py  test_config_registry.py  test_config_two_layer_integration.py  test_config_validation.py  test_example_component.py  test_magicc_regression.py  test_model.py  test_ocean_regression.py  test_progress_integration.py  test_spatial_grids.py  test_state_value.py  test_two_layer.py  test_typed_python_component.py  test_typed_slices.py  test_variable_schema.py
tests/regression/: conftest.py  helpers.py  test_ghg_forcing.py  test_ocean_udeb.py  test_terrestrial_carbon.py  test_terrestrial_parity.py
(+230 files in other folders)
