
[workspace]
members = [
    # Python interface
    "crates/rscm",
    # Core functionality
    "crates/rscm-core",
    "crates/rscm-components",
    # Utilities and macros
    "crates/rscm-macros",
    "crates/rscm-doc-gen",
    # Models
    "crates/rscm-two-layer",
    "crates/rscm-magicc",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/lewisjared/rscm"
authors = ["Jared Lewis <jared.lewis@climate-resource.com>"]
keywords = ["physics", "scm", "climate"]
categories = ["science"]

[workspace.dependencies]
rscm-core = { version = "0.4.0", path = "crates/rscm-core" }
rscm-components = { version = "0.4.0", path = "crates/rscm-components" }
rscm-macros = { version = "0.4.0", path = "crates/rscm-macros" }
rscm-two-layer = { version = "0.4.0", path = "crates/rscm-two-layer" }
rscm-magicc = { version = "0.4.0", path = "crates/rscm-magicc" }
