[package]
name = "rscm-components"
version = "0.1.0"
edition = "2021"
description = "Example components that are useful in reduced-complexity climate models"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/lewisjared/rscm"
authors = ["Jared Lewis <jared.lewis@climate-energy-college.org>"]
keywords = ["physics", "scm", "climate"]
categories = ["science"]
workspace = ".."

[dependencies]
rscm-core = { version = "0.1.0", path = "../rscm-core" }
pythonize = "0.21.1"
ode_solvers = "0.4.0"
serde = { version = "1.0.214", features = ["derive"] }
typetag = "0.2"
numpy = "0.21.0"

[dependencies.pyo3]
version = "0.21.0"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38", "multiple-pymethods"]

[dev-dependencies]
rstest = "0.23.0"
approx = "0.5.1"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "../assets/katex-header.html" ]
