[package]
name = "rscm-components"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Example components that are useful in reduced-complexity climate models"
readme = "README.md"

[dependencies]
rscm-core.workspace = true
pythonize = "0.21.1"
ode_solvers = "0.4.0"
serde = { version = "1.0.214", features = ["derive"] }
typetag = "0.2"
numpy = "0.21.0"

[dependencies.pyo3]
version = "0.21.0"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38", "multiple-pymethods"]

[dev-dependencies]
rstest = "0.23.0"
approx = "0.5.1"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "../assets/katex-header.html" ]
