[package]
name = "rscm-doc-gen"
version = "0.1.0"
edition = "2021"
description = "Documentation generator for RSCM components"
publish = false

[[bin]]
name = "rscm-doc-gen"
path = "src/main.rs"

[dependencies]
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
regex = "1"
